--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="styles/base.css">
+  <link rel="stylesheet" type="text/css" href="styles/modules.css">
 
   <script id='ghost-template' type='text/x-handlebars-template'>
     <img class="cover-img" src="{{imgSrc}}">
@@ -18,7 +19,7 @@
 
 <img id="menuTreeDiv" src="http://zanreads.info/spook_tree3.png">
 
-<div class="link" id="books-link">good</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;reads</div>
+<div class="menu-link" id="books-link">good</br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;reads</div>
 
 </div>
 
@@ -32,6 +33,8 @@
 <script src="/scripts/tombstone.js"></script>
 <script src="/scripts/post.js"></script>
 <script src="/scripts/index.js"></script>
+<script src="/scripts/flock.js"></script>
+
 <script>
 Post.fetchAll(init);
 
