--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <script src="/scripts/post.js"></script>
 <script src="/scripts/index.js"></script>
 <script src="/scripts/flock.js"></script>
-
+<script src="/scripts/fog.js"></script>
 <script>
 Post.fetchAll(init);
 
