--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <script src="/scripts/index.js"></script>
 <script src="/scripts/flock.js"></script>
 <script src="/scripts/fog.js"></script>
+<script src="/scripts/moon.js"></script>
+
 <script>
 Post.fetchAll(init);
 
