--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
 
 <div id="canvasWrap">
-
-<img id="earthDiv" src="http://zanreads.info/earth.png">
-
-<img id="menuTreeDiv" src="http://zanreads.info/spook_tree3.png">
-
+  <img id="earthDiv" src="http://zanreads.info/earth.png">
+  <img id="menuTreeDiv" src="http://zanreads.info/spook_tree3.png">
 </div>
 
+<!-- <div id="postWrap">
+  <div id="textDiv">
+</div> -->
 
 
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
