establish routing to post page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="styles/base.css">
-  <link rel="stylesheet" type="text/css" href="styles/modules.css">
+  <link rel="stylesheet" type="text/css" href="/styles/base.css">
+  <link rel="stylesheet" type="text/css" href="/styles/modules.css">
 
   <script id='ghost-template' type='text/x-handlebars-template'>
     <img class="cover-img" src="{{imgSrc}}">
@@ -18,9 +18,9 @@
   <img id="menuTreeDiv" src="http://zanreads.info/spook_tree3.png">
 </div>
 
-<!-- <div id="postWrap">
-  <div id="textDiv">
-</div> -->
+<div id="post-page-wrap">
+  <div id="textDiv"></div>
+</div>
 
 
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
@@ -31,6 +31,7 @@
 <script src="/scripts/ghost.js"></script>
 <script src="/scripts/tombstone.js"></script>
 <script src="/scripts/post.js"></script>
+<script src="/scripts/postController.js"></script>
 <script src="/scripts/indexController.js"></script>
 <script src="/scripts/flock.js"></script>
 <script src="/scripts/fog.js"></script>
