add link to post page from ghost body

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script id='ghost-template' type='text/x-handlebars-template'>
     <img class="cover-img" src="{{imgSrc}}">
     <div class="title">{{title}}</div>
-    <div class="body">{{{body}}}</div>
+    <a href="/reviews/{{id}}"><div class="body">{{{body}}}</div></a>
   </script>
 
 </head>
