setup post page template, now displays post body

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <a href="/reviews/{{id}}"><div class="body">{{{body}}}</div></a>
   </script>
 
+  <script id='post-page-template' type='text/x-handlebars-template'>
+    <div id="textDiv">{{{body}}}</div>
+  </script>
+
 </head>
 <body>
 
@@ -18,9 +22,7 @@
   <img id="menuTreeDiv" src="http://zanreads.info/spook_tree3.png">
 </div>
 
-<div id="post-page-wrap">
-  <div id="textDiv"></div>
-</div>
+<div id="post-page-wrap"></div>
 
 
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
