set post page background

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </script>
 
   <script id='post-page-template' type='text/x-handlebars-template'>
+    <div id="imgDiv"><img src='{{imgSrc}}'></div>
     <div id="textDiv">{{{body}}}</div>
   </script>
 
