--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <script id='ghost-template' type='text/x-handlebars-template'>
     <img class="cover-img" src="{{imgSrc}}">
-    <div class="title">{{title}}</div>
+    <div class="title">{{title}}<br>-<br><small>{{author}}</small></div>
     <a href="/reviews/{{id}}"><div class="body">{{{body}}}</div></a>
   </script>
 
