catalog styling and home link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </script>
 
   <script id='catalog-template' type='text/x-handlebars-template'>
-    <a href='{{url}}' class='cat-link'><h4>{{titleUpCs}} - {{author}}</h4></a>
+    <a href='{{url}}' class='cat-link'><h3>{{titleUpCs}} - {{author}}</h3></a>
   </script>
 
 </head>
@@ -41,7 +41,7 @@
 <div id="post-page-wrap"></div>
 
 <div id="catalog-wrap">
-<h1><u>Z A N &nbsp; R E A D S &nbsp; . &nbsp; I N F O</u></h1>
+<a href="/" id="catalog-title"><h1><u>Z A N &nbsp; R E A D S &nbsp; . &nbsp; I N F O</u></h1></a>
 
 </div>
 
