--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <div id="textDiv">{{{body}}}</div>
     <div id="ghost-links">{{{ghostLinks}}}</div>
     <div id="home-link"></div>
+    <div id="catalog-p-link"></div>
+
   </script>
 
   <script id='ghost-link-template' type='text/x-handlebars-template'>
