added earth.png and spook_tree3.png

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <body>
 
 <div id="canvasWrap">
-  <img id="earthDiv" src="http://zanreads.info/earth.png">
-  <img id="menuTreeDiv" src="http://zanreads.info/spook_tree3.png">
+  <img id="earthDiv" src="media/earth.png">
+  <img id="menuTreeDiv" src="media/spook_tree3.png">
 </div>
 
 <div id="post-page-wrap"></div>
