add tab icon and title

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="/styles/base.css">
   <link rel="stylesheet" type="text/css" href="/styles/modules.css">
+  <link rel="shortcut icon" href="/media/ghost.png">
+  <title>ZANREADS.INFO</title>
 
   <script id='ghost-template' type='text/x-handlebars-template'>
     <img class="cover-img" src="{{imgSrc}}">
@@ -22,7 +24,7 @@
   <script id='ghost-link-template' type='text/x-handlebars-template'>
     <div class="ghost-link-div">
       <a href="{{url}}">
-        <img src='\media\ghost.png'>
+        <img src='/media/ghost.png'>
         <div class="ghost-link-text">{{{title}}}</div>
       </a>
     </div>
