--- a/new.html
+++ b/new.html
@@ -5,6 +5,20 @@
   </head>
   <body>
     <h1>plz respond</h1>
+    <form id='new-post-form' method="post" action="/data/reviews2.json">
+      title:<br>
+      <input type="text" name="title"><br>
+      author:<br>
+      <input type="text" name="author"><br>
+      img url:<br>
+      <input type="text" name="imgSrc"><br>
+      post:<br>
+      <input type="text" name="body"><br>
+      <input type="submit" value="submit">
+    </form>
+
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+    <script src="/scripts/newPostController.js"></script>
 
   </body>
 </html>
