--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>plz respond</h1>
-    <form id='new-post-form' method="post" action="/data/reviews2.json">
+    <form id='new-post-form' method="post" action="/posts">
       title:<br>
       <input type="text" name="title"><br>
       author:<br>
@@ -17,8 +17,8 @@
       <input type="submit" value="submit">
     </form>
 
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
-    <script src="/scripts/newPostController.js"></script>
+    <!-- <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script> -->
+    <!-- <script src="/scripts/newPostController.js"></script> -->
 
   </body>
 </html>
