--- a/crud.html
+++ b/crud.html
@@ -6,7 +6,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
-
+    <style type="text/css">
+      .hidden { display:none; }
+    </style>
   </head>
   <body>
     <h1>plz respond</h1>
